# RapidFuzzDotNet

./: .editorconfig  .gitattributes  .gitignore  Directory.Build.props  Directory.Packages.props  LICENSE  NOTICE  README.md  RapidFuzzDotNet.slnx
.github/workflows/: benchmarks.yml  ci.yml  release.yml  upstream-drift.yml
benchmarks/RapidFuzzDotNet.Benchmarks/: CrossLanguageBenchmarks.cs  CrossLanguageValidation.cs  OfficialCppParityBenchmarks.cs  Program.cs  RapidFuzzDotNet.Benchmarks.csproj
benchmarks/cross-language/: benchmark_python.py  benchmark_python_official.py  generate_corpus.py  report.py  requirements.txt  test_benchmark_pipeline.py  validate_inventory.py  validate_official_results.py  validate_supplementary_results.py  versions.json
benchmarks/cross-language/cpp/: CMakeLists.txt  common_benchmarks.cpp
src/RapidFuzzDotNet/: CachedFuzz.cs  CrossTypeCachedFuzz.cs  CrossTypeFuzz.cs  Fuzz.cs  Process.cs  README.md  RapidFuzzDotNet.csproj  ScoreAlignment.cs  SequenceEqualityComparer.cs  Utils.cs
src/RapidFuzzDotNet/Distance/: Indel.cs  (+18 more)
tests/RapidFuzzDotNet.Tests/: CrossTypeParityTests.cs  DistanceTests.cs  ExperimentalTests.cs  FinalParityApiTests.cs  FuzzTests.cs  GenericCachedAndFuzzingParityTests.cs  ProcessTests.cs  PublicApiBaseline.txt  RapidFuzzDotNet.Tests.csproj  ReferenceScorers.cs  UpstreamNamedFixtureTests.cs  UtilsTests.cs
tools/RapidFuzzDotNet.AllocationGuard/: Program.cs
tools/RapidFuzzDotNet.Fuzzing/: Program.cs  RapidFuzzDotNet.Fuzzing.csproj
tools/RapidFuzzDotNet.PackageVerifier/: Program.cs  RapidFuzzDotNet.PackageVerifier.csproj
(+23 files in other folders)
